style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  border: none;
  outline: none;
  scroll-behavior: smooth;
  font-family: "Nunito Sans", sans-serif;
}

:root {
  --bg-color: #080808;
  --second-bg-color: #131313;
  --text-color: #ffffff;
  --main-color: #e14f91;
  --header-color: rgba(0, 0, 0, 0.3);
}

.light-mode {
  --bg-color: #fcf0e9; 
  --second-bg-color: #fdf3ee;
  --text-color: #000000; 
  --main-color: #e14f91;
  --header-color: rgba(252, 240, 233, 0.3);
}

html {
  font-size: 60%;
  overflow-x: hidden;
}

body {
  background: var(--bg-color);
  color: var(--text-color);
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 4rem 12% 4rem;
  background: var(--header-color);
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 5;
}

.header,
.navbar a,
.timeline-content p,
.timeline-date,
.contact-item p,
.contact-item a,
.footer ul li a,
.footer .copyright {
  color: var(--text-color);
}

#nav-buttons{
  padding-left: 1rem;
}

.logo {
  font-size: 3rem;
  color: var(--text-color);
  font-weight: 800;
  cursor: pointer;
  transition: 0.3s ease;
}

.logo:hover {
  transform: scale(1.1);
}

.logo span {
  text-shadow: 0 0 25px var(--main-color);
}

.navbar a {
  font-size: 1.8rem;
  color: var(--text-color);
  margin-left: 4rem;
  font-weight: 500;
  transition: 0.3s ease;
  border-bottom: 3px solid transparent;
}

.navbar a:hover,
.navbar a.active {
  color: var(--main-color);
  border-bottom: 3px solid var(--main-color);
}

#language-toggle {
  margin-left: 10px;
}

#menu-icon {
  font-size: 3.6rem;
  color: var(--main-color);
  display: none;
}

section {
  min-height: 100vh;
  padding: 10rem 12% 10rem;
}

.home {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15rem;
}

.home-content {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  text-align: left;
  justify-content: center;
  margin-top: 3rem;
}

span {
  color: var(--main-color);
}

.logo span {
  color: var(--main-color);
}

.home-content h3 {
  margin-bottom: 2rem;
  margin-top: 1rem;
  font-size: 3.5rem;
}

.home-content h1 {
  font-size: 7rem;
  font-weight: 700;
  margin-top: 1.5rem;
  line-height: 1;
}

.home-img{
  border-radius: 50%;
}

.home-img img{
  position: relative;
  top: 3rem;
  width: 32vw;
  border-radius: 50%;
  box-shadow: 0 0 25px var(--main-color);
  cursor: pointer;
  transition: 0.4s ease-in-out;
}

.home-img img:hover{
  box-shadow: 0 0 25px var(--main-color),
              0 0 50px var(--main-color),
              0 0 100px var(--main-color);

}

.home-content p{
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 1.8;
  max-width: 1000px;
}

.social-icons a{
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 4.5rem;
  height: 4.5rem;
  background: transparent;
  border: 2px solid var(--main-color);
  font-size: 2.5rem;
  border-radius: 50%;
  color: var(--main-color);
  margin: 3rem 1.5rem 3rem 0;
  transition: 0.3s ease-in-out;
}

.social-icons a:hover{
  color: #ffffff;
  transform: scale(1.3)translateY(-5px);
  box-shadow: 0 0 25px var(--main-color);
  background-color: var(--main-color);
}

.toggle{
  display: inline-block;
  padding: 1rem 2.8rem;
  background: var(--main-color);
  box-shadow: 0 0 25px var(--main-color);
  border-radius: 1rem;
  font-size: 1.6rem;
  color: #fcf0e9;
  border: 2px solid transparent;
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.toggle:hover{
  transform: scale(1.05);
  box-shadow: 0 0 50px var(--main-color);
}

.btn{
  display: inline-block;
  padding: 1rem 2.8rem;
  background: var(--main-color);
  box-shadow: 0 0 25px var(--main-color);
  border-radius: 4rem;
  font-size: 1.6rem;
  color: #000000;
  border: 2px solid transparent;
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.btn:hover{
  transform: scale(1.05);
  box-shadow: 0 0 50px var(--main-color);
}

.btn-group{
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

.btn-group a:nth-of-type(2){
  background-color: var(--bg-color);
  color: var(--main-color);
  border: 2px solid var(--main-color);
  box-shadow: 0 0 25px transparent;
} 

.btn-group a:nth-of-type(2):hover{
  box-shadow: 0 0 25px var(--main-color);
  background-color: var(--main-color);
  color: #000000;
}

h3.text-animation{
  font-size: 34px;
  font-weight: 600;
  min-width: 280px;
  position: relative;
  display: inline-block;
  overflow: hidden; /* Ukryj nadmiar tekstu */
  white-space: nowrap; /* Zapobiegaj łamaniu linii */
}

.text-animation span{
  position: relative;
}

.text-animation span::before{
  content: "Nauka Języka Polskiego";
  color: var(--main-color);
  animation: words 20s infinite;
}

.text-animation span::after{
  content: "";
  background-color: var(--bg-color);
  position: absolute;
  width: calc(100% + 8px);
  height: 100%;
  border-left: 3px solid var(--bg-color);
  right: -8px;
  animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
}

@keyframes cursor{
  to{
    border-left: 2px solid var(--main-color);
  }
}
@keyframes words{
  0%,
  20%{
    content: "naukę języka polskiego";
  }
  21%,
  40%{
    content: "lekcje indywidualne";
  }
  41%,
  60%{
    content: "zajęcia grupowe";
  }
  61%,
  80%{
    content: "testy i egzaminy";
  }
  81%,
  100%{
    content: "korepetycje";
  }
}

@keyframes typing{
  10%,
  15%,
  30%,
  35%,
  50%,
  55%,
  70%,
  75%,
  90%,
  95%{
    width: 0;
  }
  5%,
  20%,
  25%,
  40%,
  45%,
  60%,
  65%,
  80%,
  85%{
    width: calc(100% + 8px);
  }
}

.heading{
  font-size: 8rem;
  text-align: center;
  margin: 5rem 0;
}

.education{
  padding: 100px 15px;
  background: var(--second-bg-color);
}

.education h2{
  margin-bottom: 5rem;
}

.timeline-items{
  max-width: 1200px;
  margin:auto;
  display: flex;
  flex-wrap: wrap;
  position: relative;
}
/* ... */

